# monk-api-rust

./: .env  .env.example  .gitignore  Cargo.toml  README.md  WARP.md  rustfmt.toml
docs/: CONFIG.md  PLAN.md
docs/preplan/: DATABASE.md  DATABASE_DESIGN.md  FILTER_LANGUAGE.md  OBSERVER_SYSTEM.md  RECORD_METADATA_SYSTEM.md  SELECT_OPERATIONS_IN_OBSERVER_PIPELINE.md  STATEFUL_RECORD_PATTERN.md  TENANT_PROVISIONING.md  TRANSACTIONS_AND_RESPONSES.md
fixtures/advanced/: init.sql
fixtures/advanced/schemas/: task.json
fixtures/basic/: README.md
fixtures/basic/schemas/: account.json  project.json
fixtures/empty/: README.md
fixtures/system/: .gitkeep  README.md  init.sql
src/: error.rs  lib.rs  main.rs  types.rs
src/api/: format.rs
src/auth/: mod.rs
src/cli/: config.rs  mod.rs  utils.rs
src/cli/commands/: auth.rs  data.rs  describe.rs  fixture.rs  init.rs  meta.rs  mod.rs  server.rs  tenant.rs
src/config/: mod.rs
src/database/: dynamic.rs  manager.rs  mod.rs  query_builder.rs  record.rs  repository.rs  service.rs
src/database/models/: column.rs  mod.rs  schema.rs  tenant.rs  user.rs
src/filter/: error.rs  filter.rs  filter_order.rs  filter_where.rs  mod.rs  types.rs
src/handlers/: README.md  data.rs  mod.rs
src/handlers/auth/: whoami.rs
src/handlers/data/: schema_post.rs  schema_put.rs
src/handlers/elevated/: README.md  mod.rs
src/handlers/elevated/root/: mod.rs
src/handlers/meta/: mod.rs  schema_delete.rs  schema_get.rs  schema_post.rs  schema_put.rs
src/handlers/protected/: README.md  mod.rs
src/handlers/protected/auth/: mod.rs  session.rs  sudo.rs  utils.rs
src/handlers/protected/data/: mod.rs  record.rs  record_get.rs  schema.rs  schema_delete.rs  schema_get.rs  utils.rs
src/handlers/protected/describe/: column.rs  mod.rs  schema.rs
src/handlers/protected/find/: find_post.rs  mod.rs  schema.rs
src/handlers/protected/meta/: mod.rs  schema.rs
src/handlers/public/: README.md  mod.rs
src/handlers/public/auth/: login.rs  mod.rs  refresh.rs  user.rs  (+3 more)
src/middleware/: auth.rs  mod.rs  response.rs  validate_tenant.rs  validate_user.rs
src/observer/: README.md  context.rs  error.rs  mod.rs  pipeline.rs  stateful_record.rs  traits.rs
src/observer/implementations/: create_sql_executor.rs  data_preparation.rs  delete_sql_executor.rs  mod.rs  revert_sql_executor.rs  select_sql_executor.rs  sql_executor.rs  sql_executors.rs  update_sql_executor.rs
src/services/: describe_service.rs  mod.rs  tenant_service.rs
src/testing/: mod.rs
tests/: 10_auth.rs  32_data_api.rs  44_filter.rs  90_login.rs
tests/common/: mod.rs
(+30 files in other folders)
