[package]
name = "monk-api-rust"
version = "0.1.0"
edition = "2021"
authors = ["Ian Zepp <ian.zepp@protonmail.com>"]
description = "Rust rewrite of Monk API - PaaS management platform with multi-tenant support"
license = "MIT"
repository = "https://github.com/ianzepp/monk-api-rust"

[dependencies]
# Web framework
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Authentication
jsonwebtoken = "9.2"

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "1.0"

# Environment
dotenvy = "0.15"

[dev-dependencies]
tower-test = "0.4"
